--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </script>
   </head>
   <body>
-    <div id="unityContainer" style="width: 1920px; height: 1080px; margin: auto"></div>
+    <div id="unityContainer" style="width: 1920px; height: 1080px; margin: 20px"></div>
   </body>
 </html>
